--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
     "token": "Njk3NTY5MDY3MjQxODMyNjUy.Xo5Qvg.aD1WHQql2PYrNJiG-By99mN5OYQ",
     "dependencies": {
         "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
-        "discord.js": "^12.1.1",
+        "discord.js": "^12.2.0",
         "nodemon": "^2.0.3",
         "winston": "^3.2.1"
-    }, 
+    },
     "nodemonConfig": {
-    "ignore": ["*.json"]
-  }
+        "ignore": [
+            "*.json"
+        ]
+    },
+    "prefix": "="
 }
