Move from auth.json to package.json
Moved stuff that should've been in package.json from auth.json.

--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
             "*.json"
         ]
     },
-    "prefix": "="
+    "prefix": "=",
+    "name": "pluto",
+    "version": "1.0.0",
+    "description": "A Messenger Bot for Parliament",
+    "main": "bot.js",
+    "author": "Secnyt"
 }
