--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "dependencies": {
+        "canvas": "^2.6.1",
+        "convert-svg-to-png": "^0.5.0",
         "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
         "discord.js": "^12.2.0",
         "nodemon": "^2.0.4",
-        "winston": "^3.2.1"
+        "svg-captcha": "^1.4.0"
     },
     "nodemonConfig": {
         "ignore": [
