Finished queueHandler, added class Suggestion, fixed read/write system for suggestions/queue
queueHandler is finished for what I'm doing right now, made a class called Suggestion to make organization easier (plus being able to access guild from Suggestion.g and user who suggested with Suggestion.user. Also .gitignored files which shouldn't or ones that I don't want on the internet (snatches, suggestions, private stuff).

--- a/.gitignore
+++ b/.gitignore
@@ -106,5 +106,8 @@ dist
 # TernJS port file
 .tern-port
 
-# Authorization file
+# Stuff I don't need on the internet
 /auth.json
+/storage/suggestions
+/storage/snatches
+/storage/images
