Update .gitignore to be more specific
ignore suggestions.json vs its folder.

--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,6 @@ dist
 
 # Stuff I don't need on the internet
 /auth.json
-/storage/suggestions
+/storage/suggestions/suggestions.json
 /storage/snatches
 /storage/images
