--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "dependencies": {
         "canvas": "^2.6.1",
-        "convert-svg-to-png": "^0.5.0",
         "discord.js": "^12.2.0",
+        "jsdom": "^16.2.2",
         "nodemon": "^2.0.4",
-        "svg-captcha": "^1.4.0"
+        "svg-captcha": "^1.4.0",
+        "tinycolor2": "^1.4.1"
     },
     "nodemonConfig": {
         "ignore": [
