--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ dist
 /auth.json
 /storage/suggestions/suggestions.json
 /storage/snatches
+/storage/images
 /captcha
 !/captcha/captcha.js
 /server specific options stuff/serverOptions.json
