--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "canvas": "^2.6.1",
         "discord.js": "^12.2.0",
         "jsdom": "^16.2.2",
+        "mongodb": "^3.6.0",
         "nodemon": "^2.0.4",
         "svg-captcha": "^1.4.0",
         "tinycolor2": "^1.4.1"
