--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "dependencies": {
+        "@vitalets/google-translate-api": "^4.0.0",
         "canvas": "^2.6.1",
         "discord.js": "^12.2.0",
         "jsdom": "^16.2.2",
         "mongodb": "^3.6.0",
         "nodemon": "^2.0.4",
+        "solenolyrics": "^5.0.0",
         "svg-captcha": "^1.4.0",
         "tinycolor2": "^1.4.1"
     },
@@ -15,8 +17,8 @@
     },
     "prefix": "=",
     "name": "pluto",
-    "version": "1.0.0",
-    "description": "A Messenger Bot for Parliament",
-    "main": "bot.js",
+    "version": "1.2.0",
+    "description": "A general bot.",
+    "main": "pluto.js",
     "author": "Secnyt"
 }
