suggestion reform final touches + sgr rewrite and effiency+

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ dist
 /handling/commands/suggest/suggest.handler.js
 /handling/commands/suggest/suggest.class.js
 /handling/commands/suggest/queue.handler.js
+./handling/commands/suggest/suggestremove.handler.js
