--- a/.gitignore
+++ b/.gitignore
@@ -122,4 +122,5 @@ dist
 /handling/commands/suggest/suggest.handler.js
 /handling/commands/suggest/suggest.class.js
 /handling/commands/suggest/queue.handler.js
-./handling/commands/suggest/suggestremove.handler.js
+/handling/commands/suggest/suggestremove.handler.js
+/handling/commands/translate+songs/translate.handler.js
