lyrics rewrite (still not fully functional, will be soon)

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ dist
 /handling/commands/suggest/queue.handler.js
 /handling/commands/suggest/suggestremove.handler.js
 /handling/commands/translate+songs/translate.handler.js
+/handling/commands/translate+songs/lyrics.handler.js
