--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
             "*.json"
         ]
     },
-    "prefix": "=",
     "name": "pluto",
     "version": "1.2.0",
     "description": "A general bot.",
     "main": "pluto.js",
-    "author": "Secnyt"
+    "author": "Secnyt",
+    "scripts": {
+        "start": "node build/main/pluto/pluto.js",
+        "compile": "tsc --resolveJsonModule"
+    },
+    "devDependencies": {
+        "typescript": "^4.1.5"
+    }
 }
