--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
     "dependencies": {
-        "@vitalets/google-translate-api": "^4.0.0",
         "discord.js": "^12.2.0",
         "mongodb": "^3.6.0",
-        "nodemon": "^2.0.4",
-        "solenolyrics": "^5.0.0"
+        "nodemon": "^2.0.4"
     },
     "nodemonConfig": {
         "ignore": [
