--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "dependencies": {
         "discord.js": "^12.2.0",
-        "mongodb": "^3.6.0",
-        "nodemon": "^2.0.4"
+        "mongodb": "^3.6.0"
     },
     "nodemonConfig": {
         "ignore": [
@@ -10,15 +9,16 @@
         ]
     },
     "name": "pluto",
-    "version": "1.2.0",
+    "version": "2.1.0",
     "description": "A general bot.",
-    "main": "pluto.js",
+    "main": "src/main/pluto/pluto.ts",
     "author": "Secnyt",
     "scripts": {
         "start": "node build/main/pluto/pluto.js",
         "compile": "tsc --resolveJsonModule"
     },
     "devDependencies": {
-        "typescript": "^4.1.5"
+        "typescript": "^4.1.5",
+        "nodemon": "^2.0.4"
     }
 }
