--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "dependencies": {
         "discord.js": "^12.2.0",
-        "mongodb": "^3.6.0"
+        "mongodb": "^3.6.0",
+        "string-math": "^1.2.2"
     },
     "nodemonConfig": {
         "ignore": [
@@ -15,10 +16,12 @@
     "author": "Secnyt",
     "scripts": {
         "start": "node build/main/pluto/pluto.js",
-        "compile": "tsc --resolveJsonModule"
+        "compile": "rimraf build && tsc",
+        "dev": "nodemon build/main/pluto/pluto.js"
     },
     "devDependencies": {
-        "typescript": "^4.1.5",
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.4",
+        "rimraf": "^3.0.2",
+        "typescript": "^4.1.5"
     }
 }
