--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "esnext",
         "module": "commonjs",
         "outDir": "build",
-        "rootDir": "src"
+        "rootDir": "src",
+        "resolveJsonModule": true
     },
     "include": [
         "src"
