--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "mongodb": "^3.6.0",
         "nerdamer": "^1.1.7",
         "random": "^2.2.0",
+        "random-number": "0.0.9",
         "solenolyrics": "^5.0.0"
     },
     "nodemonConfig": {
