--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "resolveJsonModule": true
     },
     "include": [
-        "src"
+      "src",
+      "../../../AppData/Local/JetBrains/IntelliJIdea2021.1/javascript/typings/node/16.10.0/node_modules/@types/node/globals.d.ts"
     ],
     "exclude": [
         "node_modules",
